# aoc

./: .gitignore  CMakeLists.txt  CMakePresets.json  go.mod  vcpkg.json
2022/cmd/day1/: main.go
2022/cmd/day2/: main.go
2022/cmd/day3/: main.go  main_test.go
2022/cmd/day4/: main.go
2022/cmd/day5/: main.go
2022/cmd/day6/: main.go
2022/cmd/day7/: main.go
2023/: Makefile  strutil.h
2023/common/: common.c  common.h
2023/day1/: day1.c
2023/run/: day1
2023/src/2023/day1/: day1.c  part2_test.c
2023/src/2023/day2/: Day2.hpp
2023/src/2023/day3/: Day3.hpp
2023/src/2023/day4/: Day4.hpp
2023/src/2023/day5/: Day5.cpp
2023/src/util/: Interval.hpp
2024/: .gitignore  README.md  go.mod  go.sum  run.go
2024/api/: api.go
2024/day1/: part1.go  part1_test.go  part2.go  part2_test.go
2024/day2/: day2.go  day2_test.go  part1.go  part2.go
2024/day3/: day3.go  day3_test.go  part1.go  part2.go
2024/day4/: day4.go  day4_test.go  part1.go  part2.go
2024/day5/: day5.go  day5_test.go  day5part1.go  day5part2.go
2024/day6/: day6.go  day6_test.go  day6part1.go  day6part2.go
2024/day7/: day7.go  day7_test.go  day7part1.go  day7part2.go
2024/registry/: registry.go
2024/util/: util.go
cmd/day1/: main.go
cmd/day2/: main.go
cmd/day3/: main.go
cmd/day4/: main.go
cmd/day5/: main.go
cmd/day7/: main.go
resources/: day3_test1_4361.txt  day3_test1_7253.txt  day5_output.txt  day5_sample.txt
src/: AOCRenderer.cpp  AOCRenderer.h  AOCRenderer.hpp  AOCWorld.cpp  AOCWorld.h  AOCWorld.hpp  Split.cpp  Split.h  Split.hpp  main.cpp
src/2023/common/: Grid.hpp
src/2023/day1/: part1.c  part1_test.c  part2.c  parts.h
src/2023/day2/: Day2.cpp  Day2.hpp
src/2023/day3/: Day3.cpp  Day3.hpp
src/2023/day4/: Day4.cpp
src/2023/day5/: Day5.cpp  Day5.hpp
src/util/: Convert.hpp  Grid.hpp  Interval.hpp  Split.hpp  Trim.hpp
util/: util.go
